Se actualizó platillos.jsp
Se agregó una etiqueta para indicar que no hay platillos cuando no los haya

--- a/src/main/webapp/css/platillosStyle.css
+++ b/src/main/webapp/css/platillosStyle.css
@@ -75,6 +75,14 @@ body{
     font-family: 'Source Sans Pro', sans-serif;
 }
 
+.noplatillos{
+    font-family: 'Source Sans Pro', sans-serif;
+    color: red;
+    text-align: center;
+    width: 100%;
+}
+
+
 .restaurantePlatillo{
     color: gray;
     font-size: small;
