--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -63,7 +63,7 @@ body{
     padding: 0;
 }
 
-.reporteLink:link{
+.reporteLink{
     color: white;
     text-decoration: underline;
     font-family: 'Source-Sans-Pro', sans-serif;
